[build-system]
requires = ["setuptools>=61.0", "setuptools-scm[toml]>=7"]
build-backend = "setuptools.build_meta"

[project]
name = "cleura-openstackclient"
dynamic = ["version"]
description = "Conveniently installs OpenStack clients for use with Cleura Cloud"
requires-python = ">=3.11"
dependencies = [
    "python-barbicanclient<7.2.0",
    "python-cinderclient<9.8.0",
    "python-designateclient<6.3.0",
    "python-freezerclient<6.1.0",
    "python-glanceclient<4.9.0",
    "python-heatclient<4.2.0",
    "python-keystoneclient<5.7.0",
    "python-neutronclient<11.5.0",
    "python-novaclient<18.10.0",
    "python-octaviaclient<3.11.0",
    "python-openstackclient<7.6.0",
    "python-swiftclient<4.8.0",
    "openstacksdk<4.5.0",
]
readme = {file = "README.md", content-type = "text/markdown"}
license = "Apache-2.0"
license-files = ["LICENSE.txt"]

[project.urls]
Homepage = "https://github.com/cleura/cleura-openstackclient"
Issues = "https://github.com/cleura/cleura-openstackclient/issues"

[dependency-groups]
flake8 = [
    "flake8",
    "flake8-pyproject"
]
gitlint = [
    "gitlint",
]
yamllint = [
    "yamllint",
]
markdownlint = [
    "pymarkdownlnt",
]
bumpversion = [
    "bump-my-version",
]
build = [
    "build",
]
release = [
    "twine",
]


[tool.tox]
requires = ["tox>=4"]
env_list = ["yamllint", "markdownlint", "3.14", "3.13", "3.12", "3.11"]

[tool.tox.env_run_base]
description = "Run tests under {base_python}"
commands = [["flake8"]]
dependency_groups = ["flake8"]

[tool.tox.env.gitlint]
skip_install = true
description = "Check Git commit message"
commands = [["gitlint"]]
dependency_groups = [
    "gitlint",
]

[tool.tox.env.yamllint]
skip_install = true
description = "Check YAML files"
commands = [["yamllint", "{toxinidir}"]]
dependency_groups = [
    "yamllint",
]

[tool.tox.env.markdownlint]
skip_install = true
description = "Check Markdown files"
commands = [["pymarkdown", "-c", ".pymarkdown.json", "scan", "--respect-gitignore", "-r", "{toxinidir}"]]
dependency_groups = [
    "markdownlint",
]

[tool.tox.env.bumpversion]
skip_install = true
description = "Increment the major, minor, or patch version indicator"
commands = [["bump-my-version", "bump", "{posargs}"]]
dependency_groups = [
    "bumpversion",
]

[tool.tox.env.build]
skip_install = true
description = "Build dist package"
commands = [
    ["python", "-m", "build"],
]
dependency_groups = [
    "build",
    "release",
]

[tool.tox.env.test-release]
skip_install = true
description = "Upload build to the testpypi repository"
commands = [
    ["python", "-m", "build"],
    ["python", "-m", "twine", "upload", "--verbose", "--repository", "testpypi", "dist/*"],
]
dependency_groups = [
    "build",
    "release",
]

[tool.tox.env.release]
skip_install = true
description = "Upload build to PyPI"
commands = [
    ["python", "-m", "build"],
    ["python", "-m", "twine", "upload", "dist/*"],
]
dependency_groups = [
    "build",
    "release",
]

[tool.flake8]
max-line-length = 180
statistics = true
indent-size = 2

[tool.setuptools_scm]

[tool.bumpversion]
commit = true
current_version = "0.0.3"
message = "build: Version {new_version}"
tag = true

[[tool.bumpversion.files]]
filename = "README.md"

[[tool.bumpversion.files]]
filename = "CHANGELOG.md"
search = "Unreleased"
replace = "Version {new_version} ({now:%Y-%m-%d})"
